# weighted-average

./: CHANGELOG.md  Paper.bib  Paper.md  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/weave/: dimension.html  distance.html  kernels.html  smoother.html  utils.html
docs/_sources/: index.rst.txt  installation.rst.txt
docs/api_reference/: index.html  weave.dimension.html  weave.distance.html  weave.kernels.html  weave.smoother.html  weave.utils.html
docs/user_guide/: index.html  installation.html  intro.html  quickstart.html
docsrc/: conf.py  index.rst
docsrc/api_reference/: index.rst  weave.dimension.rst  weave.distance.rst  weave.kernels.rst  weave.smoother.rst  weave.utils.rst
docsrc/user_guide/: index.rst  installation.rst  intro.rst  quickstart.rst
src/weave/: __about__.py  __init__.py  dimension.py  distance.py  kernels.py  smoother.py  utils.py
tests/: test_dimension.py  test_distance.py  test_kernels.py  test_smoother.py  test_smoother_args.py  test_utils.py
weave/: __about__.py  dimension.py  dimension_numba.py  distance.py  distance_cython.pyx  distance_numba.py  kernels.py  kernels_numba.py  smoother.py  utils.py
weave/tests/: examples.py  test_depth_kernel.py  test_dimension.py  test_dimension_numba.py  test_distance.py  test_distance_numba.py  test_dummy.py  test_kernels.py  test_kernels_numba.py  test_smoother.py  test_smoother_args.py  test_utils.py
(+8 files in other folders)
