[metadata]
name = weighted-average
version = 1.1.2
description = Smooth data across multiple dimensions using weighted averages
long_description = file: README.md
long_description_content_type = text/markdown
author = IHME Math Sciences
author_email = ihme.math.sciences@gmail.com
license = BSD 2-Clause License
url = https://github.com/ihmeuw-msca/weighted-average
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
zip_safe = False
install_requires =
    numba
    numpy
    pandas
    scipy
include_package_data = False
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
doc =
    furo
    sphinx
    sphinx-autodoc-typehints
dev =
    hypothesis
    pytest
